src/tui/app/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p codex-coding-agent -- --exact


› Ask Codex to do anything

  gpt-5.3-codex · 100% left
